--- a/.github/workflows/main_interestcalculator.yml
+++ b/.github/workflows/main_interestcalculator.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1'
+          dotnet-version: '8.0.x'
           include-prerelease: true
 
       - name: Build with dotnet
